force-app/main/default/objects/Submission_Requirement__c/Submission_Requirement__c.object-meta.xml
<CustomObject>
    <label>Submission Requirement</label>
    <nameField>
        <displayFormat>S-{0000}</displayFormat>
        <label>Submission Requirement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Submission Requirements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>