force-app/main/default/objects/Submission_Requirement__c/fields/ACORD_Type__c.field-meta.xml
<CustomField>
    <fullName>ACORD_Type__c</fullName>
    <label>ACORD Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Trion ACORD Form</fullName>
            </value>
            <value>
                <fullName>Uploaded ACORD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>