force-app/main/default/objects/Submission_Requirement__c/fields/ANY_OTHER_INSURANCE_WITH_THIS_INSURER__c.field-meta.xml
<CustomField>
    <fullName>ANY_OTHER_INSURANCE_WITH_THIS_INSURER__c</fullName>
    <inlineHelpText>ANY OTHER INSURANCE WITH THIS INSURER?</inlineHelpText>
    <label>ANY OTHER INSURANCE WITH THIS INSURER</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N</fullName>
                <default>true</default>
                <label>N</label>
            </value>
            <value>
                <fullName>Y</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>