force-app/main/default/objects/Submission_Requirement__c/fields/ATHLETIC_TEAMS_SPONSORED__c.field-meta.xml
<CustomField>
    <fullName>ATHLETIC_TEAMS_SPONSORED__c</fullName>
    <inlineHelpText>ARE ATHLETIC TEAMS SPONSORED?</inlineHelpText>
    <label>ATHLETIC TEAMS SPONSORED</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N</fullName>
                <default>true</default>
                <label>N</label>
            </value>
            <value>
                <fullName>Y</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>