force-app/main/default/objects/Submission_Requirement__c/fields/Conga_Document_Name__c.field-meta.xml
<CustomField>
    <fullName>Conga_Document_Name__c</fullName>
    <formula>text(Requirement_Type__c ) &amp; &quot; &quot; &amp;  Opportunity__r.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga Document Name</label>
    <type>Text</type>
</CustomField>