force-app/main/default/objects/Submission_Requirement__c/fields/COVERAGE_DEC_CANC_NON_RENEWED_IN_LAST_3__c.field-meta.xml
<CustomField>
    <fullName>COVERAGE_DEC_CANC_NON_RENEWED_IN_LAST_3__c</fullName>
    <inlineHelpText>ANY PRIOR COVERAGE DECLINED / CANCELLED / NON-RENEWED IN THE LAST THREE (3) YEARS? (Missouri Applicants - Do not answer this question)</inlineHelpText>
    <label>COVERAGE DEC/CANC/NON-RENEWED IN LAST 3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N</fullName>
                <default>true</default>
                <label>N</label>
            </value>
            <value>
                <fullName>Y</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>