force-app/main/default/objects/Submission_Requirement__c/fields/DISCONTINUED_OPERATIONS_HAZARDOUS_MATER__c.field-meta.xml
<CustomField>
    <fullName>DISCONTINUED_OPERATIONS_HAZARDOUS_MATER__c</fullName>
    <inlineHelpText>DO / HAVE PAST, PRESENT OR DISCONTINUED OPERATIONS INVOLVE(D) STORING, TREATING, DISCHARGING, APPLYING, DISPOSING, OR TRANSPORTING OF HAZARDOUS MATERIAL? (e.g. landfills, wastes, fuel tanks, etc)</inlineHelpText>
    <label>DISCONTINUED OPERATIONS: HAZARDOUS MATER</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N</fullName>
                <default>true</default>
                <label>N</label>
            </value>
            <value>
                <fullName>Y</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>