force-app/main/default/objects/Submission_Requirement__c/fields/DISEASE_EACH_EMPLOYEE__c.field-meta.xml
<CustomField>
    <fullName>DISEASE_EACH_EMPLOYEE__c</fullName>
    <defaultValue>1000000</defaultValue>
    <label>DISEASE-EACH EMPLOYEE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>