force-app/main/default/objects/Submission_Requirement__c/fields/DISEASE_POLICY_LIMIT__c.field-meta.xml
<CustomField>
    <fullName>DISEASE_POLICY_LIMIT__c</fullName>
    <defaultValue>1000000</defaultValue>
    <label>DISEASE-POLICY LIMIT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>