force-app/main/default/objects/Submission_Requirement__c/fields/EACH_ACCIDENT__c.field-meta.xml
<CustomField>
    <fullName>EACH_ACCIDENT__c</fullName>
    <defaultValue>1000000</defaultValue>
    <label>EACH ACCIDENT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>