force-app/main/default/objects/Submission_Requirement__c/fields/EMPLOYEE_HEALTH_PLANS_PROVIDED__c.field-meta.xml
<CustomField>
    <fullName>EMPLOYEE_HEALTH_PLANS_PROVIDED__c</fullName>
    <inlineHelpText>ARE EMPLOYEE HEALTH PLANS PROVIDED?</inlineHelpText>
    <label>EMPLOYEE HEALTH PLANS PROVIDED</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N</fullName>
                <default>true</default>
                <label>N</label>
            </value>
            <value>
                <fullName>Y</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>