force-app/main/default/objects/Submission_Requirement__c/fields/EMPLOYEES_PERFORM_WORK_FOR_OTHER_BUSINES__c.field-meta.xml
<CustomField>
    <fullName>EMPLOYEES_PERFORM_WORK_FOR_OTHER_BUSINES__c</fullName>
    <inlineHelpText>DO ANY EMPLOYEES PERFORM WORK FOR OTHER BUSINESSES OR SUBSIDIARIES?</inlineHelpText>
    <label>EMPLOYEES PERFORM WORK FOR OTHER BUSINES</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N</fullName>
                <default>true</default>
                <label>N</label>
            </value>
            <value>
                <fullName>Y</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>