force-app/main/default/objects/Submission_Requirement__c/fields/EMPLOYEES_PREDOMINANTLY_WORK_AT_HOME__c.field-meta.xml
<CustomField>
    <fullName>EMPLOYEES_PREDOMINANTLY_WORK_AT_HOME__c</fullName>
    <inlineHelpText>DO ANY EMPLOYEES PREDOMINANTLY WORK AT HOME? If &quot;YES&quot;, # of Employees:</inlineHelpText>
    <label>EMPLOYEES PREDOMINANTLY WORK AT HOME</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N</fullName>
                <default>true</default>
                <label>N</label>
            </value>
            <value>
                <fullName>Y</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>