force-app/main/default/objects/Submission_Requirement__c/fields/EMPLOYEES_TRAVEL_OUT_OF_STATE__c.field-meta.xml
<CustomField>
    <fullName>EMPLOYEES_TRAVEL_OUT_OF_STATE__c</fullName>
    <inlineHelpText>DO EMPLOYEES TRAVEL OUT OF STATE? (If &quot;YES&quot;, indicate state(s) of travel and frequency)</inlineHelpText>
    <label>EMPLOYEES TRAVEL OUT OF STATE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N</fullName>
                <default>true</default>
                <label>N</label>
            </value>
            <value>
                <fullName>Y</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>