force-app/main/default/objects/Submission_Requirement__c/fields/EMPLOYEES_UNDER_16_OR_OVER_60_YEARS_OF_A__c.field-meta.xml
<CustomField>
    <fullName>EMPLOYEES_UNDER_16_OR_OVER_60_YEARS_OF_A__c</fullName>
    <inlineHelpText>ANY EMPLOYEES UNDER 16 OR OVER 60 YEARS OF AGE?</inlineHelpText>
    <label>EMPLOYEES UNDER 16 OR OVER 60 YEARS OF A</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N</fullName>
                <default>true</default>
                <label>N</label>
            </value>
            <value>
                <fullName>Y</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>