force-app/main/default/objects/Submission_Requirement__c/fields/EMPLOYEES_WITH_PHYSICAL_HANDICAPS__c.field-meta.xml
<CustomField>
    <fullName>EMPLOYEES_WITH_PHYSICAL_HANDICAPS__c</fullName>
    <inlineHelpText>ANY EMPLOYEES WITH PHYSICAL HANDICAPS?</inlineHelpText>
    <label>EMPLOYEES WITH PHYSICAL HANDICAPS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N</fullName>
                <default>true</default>
                <label>N</label>
            </value>
            <value>
                <fullName>Y</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>