force-app/main/default/objects/Submission_Requirement__c/fields/ENGAGED_IN_ANY_OTHER_TYPE_OF_BUSINESS__c.field-meta.xml
<CustomField>
    <fullName>ENGAGED_IN_ANY_OTHER_TYPE_OF_BUSINESS__c</fullName>
    <inlineHelpText>IS APPLICANT ENGAGED IN ANY OTHER TYPE OF BUSINESS?</inlineHelpText>
    <label>ENGAGED IN ANY OTHER TYPE OF BUSINESS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N</fullName>
                <default>true</default>
                <label>N</label>
            </value>
            <value>
                <fullName>Y</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>