force-app/main/default/objects/Submission_Requirement__c/fields/EXPLAIN_UNDISPUTED_AND_UNPAID_WC_PREMIUM__c.field-meta.xml
<CustomField>
    <fullName>EXPLAIN_UNDISPUTED_AND_UNPAID_WC_PREMIUM__c</fullName>
    <inlineHelpText>EXPLAIN ANY UNDISPUTED AND UNPAID WORKERS COMPENSATION PREMIUM DUE FROM YOU OR ANY COMMONLY INCLUDING ENTITY NAME(S) AND POLICY NUMBER(S).</inlineHelpText>
    <label>EXPLAIN UNDISPUTED AND UNPAID WC PREMIUM</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>