force-app/main/default/objects/Submission_Requirement__c/fields/FOREIGN_COV__c.field-meta.xml
<CustomField>
    <fullName>FOREIGN_COV__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FOREIGN COV</label>
    <type>Checkbox</type>
</CustomField>