force-app/main/default/objects/Submission_Requirement__c/fields/Generate_ACORD_Conga_URL__c.field-meta.xml
<CustomField>
    <fullName>Generate_ACORD_Conga_URL__c</fullName>
    <formula>IF(ISPICKVAL(ACORD_Type__c, &apos;Trion ACORD Form&apos;), &quot;/apex/APXTConga4__Conga_Composer?SolMgr=1&amp;serverUrl=&quot;+$Api.Partner_Server_URL_370+&apos;&amp;Id=&apos;+Id+&apos;&amp;QueryId=[accountinfo]a0H1M000014O5Fd%3Fpv0%3D&apos;+Proposal_Id__c+&apos;,[location]a0H1M000011PWl4%3Fpv0%3D&apos;+Proposal_Id__c+&apos;,[Contacts]a0H1M000011PWl9%3Fpv0%3D&apos;+Proposal_Id__c+&apos;,[inspection]a0H1M000011PWku%3Fpv0%3D&apos;+Proposal_Id__c+&apos;,[acctingrecord]a0H1M000011PWkk%3Fpv0%3D&apos;+Proposal_Id__c+&apos;,[claimsinfo]a0H1M000011PWlJ%3Fpv0%3D&apos;+Proposal_Id__c+&apos;,[generalinfo]a0H1M000011PWkp%3Fpv0%3D&apos;+Opportunity__c+&apos;,[comps]a0H1M000011PWkz%3Fpv0%3D&apos;+Proposal_Id__c+&apos;&amp;TemplateId=a0I1M000015HTF8&amp;LiveEditEnable=1&amp;DefaultPDF=1&amp;UF0=1&amp;MFTS0=ACORD_Type__c&amp;MFTSValue0=Trion+ACORD+Form&amp;DS7=11&amp;OFN=&apos;+Conga_Document_Name__c+&apos;&amp;ReturnPath=&apos;+Proposal_Id__c+&apos;&apos;, NULL)</formula>
    <label>Generate ACORD Conga URL</label>
    <type>Text</type>
</CustomField>