force-app/main/default/objects/Submission_Requirement__c/fields/GROUP_TRANSPORTATION_PROVIDED__c.field-meta.xml
<CustomField>
    <fullName>GROUP_TRANSPORTATION_PROVIDED__c</fullName>
    <inlineHelpText>ANY GROUP TRANSPORTATION PROVIDED?</inlineHelpText>
    <label>GROUP TRANSPORTATION PROVIDED</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N</fullName>
                <default>true</default>
                <label>N</label>
            </value>
            <value>
                <fullName>Y</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>