force-app/main/default/objects/Submission_Requirement__c/fields/Indicate_state_s_of_travel_and_frequenc__c.field-meta.xml
<CustomField>
    <fullName>Indicate_state_s_of_travel_and_frequenc__c</fullName>
    <inlineHelpText>Indicate state(s) of travel and frequency</inlineHelpText>
    <label>Indicate state(s) of travel and frequenc</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>