force-app/main/default/objects/Submission_Requirement__c/fields/LEASE_EMPLOYEES_TO_OR_FROM_OTHER_EMPLOYE__c.field-meta.xml
<CustomField>
    <fullName>LEASE_EMPLOYEES_TO_OR_FROM_OTHER_EMPLOYE__c</fullName>
    <inlineHelpText>DO YOU LEASE EMPLOYEES TO OR FROM OTHER EMPLOYERS?</inlineHelpText>
    <label>LEASE EMPLOYEES TO OR FROM OTHER EMPLOYE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N</fullName>
                <default>true</default>
                <label>N</label>
            </value>
            <value>
                <fullName>Y</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>