force-app/main/default/objects/Submission_Requirement__c/fields/MANAGED_CARE_OPTION__c.field-meta.xml
<CustomField>
    <fullName>MANAGED_CARE_OPTION__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MANAGED CARE OPTION</label>
    <type>Checkbox</type>
</CustomField>