force-app/main/default/objects/Submission_Requirement__c/fields/Nature_of_Business_Description__c.field-meta.xml
<CustomField>
    <fullName>Nature_of_Business_Description__c</fullName>
    <label>Nature of Business/Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>