force-app/main/default/objects/Submission_Requirement__c/fields/of_Employees_work_from_home__c.field-meta.xml
<CustomField>
    <fullName>of_Employees_work_from_home__c</fullName>
    <inlineHelpText># of Employees</inlineHelpText>
    <label># of Employees work from home</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>