force-app/main/default/objects/Submission_Requirement__c/fields/of_work_subcontracted__c.field-meta.xml
<CustomField>
    <fullName>of_work_subcontracted__c</fullName>
    <inlineHelpText>Give % of work subcontracted</inlineHelpText>
    <label>% of work subcontracted</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>