force-app/main/default/objects/Submission_Requirement__c/fields/OWN_OPERATE_LEASE_AIRCRAFT_WATERCRAFT__c.field-meta.xml
<CustomField>
    <fullName>OWN_OPERATE_LEASE_AIRCRAFT_WATERCRAFT__c</fullName>
    <inlineHelpText>DOES APPLICANT OWN, OPERATE OR LEASE AIRCRAFT / WATERCRAFT?</inlineHelpText>
    <label>OWN/OPERATE/LEASE AIRCRAFT / WATERCRAFT</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N</fullName>
                <default>true</default>
                <label>N</label>
            </value>
            <value>
                <fullName>Y</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>