force-app/main/default/objects/Submission_Requirement__c/fields/Partner_Server_URL_370__c.field-meta.xml
<CustomField>
    <fullName>Partner_Server_URL_370__c</fullName>
    <formula>$Api.Partner_Server_URL_370</formula>
    <label>Partner Server URL 370</label>
    <type>Text</type>
</CustomField>