force-app/main/default/objects/Submission_Requirement__c/fields/PHYSICALS_REQUIRED_AFTER_OFFERS_OF_EMPLO__c.field-meta.xml
<CustomField>
    <fullName>PHYSICALS_REQUIRED_AFTER_OFFERS_OF_EMPLO__c</fullName>
    <inlineHelpText>ARE PHYSICALS REQUIRED AFTER OFFERS OF EMPLOYMENT ARE MADE?</inlineHelpText>
    <label>PHYSICALS REQUIRED AFTER OFFERS OF EMPLO</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N</fullName>
                <default>true</default>
                <label>N</label>
            </value>
            <value>
                <fullName>Y</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>