force-app/main/default/objects/Submission_Requirement__c/fields/Proposal_Id__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Id__c</fullName>
    <formula>Opportunity__r.Proposal__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Proposal Id</label>
    <type>Text</type>
</CustomField>