force-app/main/default/objects/Submission_Requirement__c/fields/Required_Optional__c.field-meta.xml
<CustomField>
    <fullName>Required_Optional__c</fullName>
    <label>Required/Optional</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Required</fullName>
            </value>
            <value>
                <fullName>Optional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>