force-app/main/default/objects/Submission_Requirement__c/fields/Requirement_Type__c.field-meta.xml
<CustomField>
    <fullName>Requirement_Type__c</fullName>
    <label>Requirement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Loss Runs Valued 30 Days</fullName>
            </value>
            <value>
                <fullName>ACORD</fullName>
            </value>
            <value>
                <fullName>Competitor Quote Attached</fullName>
            </value>
            <value>
                <fullName>Current Pricing</fullName>
            </value>
            <value>
                <fullName>Health Quote Data</fullName>
            </value>
            <value>
                <fullName>MOD Rating Worksheet</fullName>
            </value>
            <value>
                <fullName>No Loss Affidavit</fullName>
            </value>
            <value>
                <fullName>Owner BIO</fullName>
            </value>
            <value>
                <fullName>RFP</fullName>
            </value>
            <value>
                <fullName>RFQ</fullName>
            </value>
            <value>
                <fullName>Sample Payroll Reports</fullName>
            </value>
            <value>
                <fullName>Staffing Supplement</fullName>
            </value>
            <value>
                <fullName>Workers Comp Dec Page</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>