force-app/main/default/objects/Submission_Requirement__c/fields/SEASONAL_EMPLOYEES__c.field-meta.xml
<CustomField>
    <fullName>SEASONAL_EMPLOYEES__c</fullName>
    <inlineHelpText>ANY SEASONAL EMPLOYEES?</inlineHelpText>
    <label>SEASONAL EMPLOYEES</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N</fullName>
                <default>true</default>
                <label>N</label>
            </value>
            <value>
                <fullName>Y</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>