force-app/main/default/objects/Submission_Requirement__c/fields/Signature_Received__c.field-meta.xml
<CustomField>
    <fullName>Signature_Received__c</fullName>
    <label>Signature Received</label>
    <type>DateTime</type>
</CustomField>