force-app/main/default/objects/Submission_Requirement__c/fields/Signature_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Signature_Request_Date__c</fullName>
    <label>Signature Request Date</label>
    <type>DateTime</type>
</CustomField>