force-app/main/default/objects/Submission_Requirement__c/fields/SPECIFY_TAX_LIENS_BANKRUPTCY__c.field-meta.xml
<CustomField>
    <fullName>SPECIFY_TAX_LIENS_BANKRUPTCY__c</fullName>
    <inlineHelpText>SPECIFY TAX LIENS/BANKRUPTCY WITHIN  LAST 5 YRS</inlineHelpText>
    <label>SPECIFY TAX LIENS/BANKRUPTCY</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>