force-app/main/default/objects/Submission_Requirement__c/fields/SUB_CONTRACTORS_USED__c.field-meta.xml
<CustomField>
    <fullName>SUB_CONTRACTORS_USED__c</fullName>
    <inlineHelpText>ARE SUB-CONTRACTORS USED? (If &quot;YES&quot;, give % of work subcontracted)</inlineHelpText>
    <label>SUB-CONTRACTORS USED</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N</fullName>
                <default>true</default>
                <label>N</label>
            </value>
            <value>
                <fullName>Y</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>