force-app/main/default/objects/Submission_Requirement__c/fields/TAX_LIENS_BANKRUPTCY_WITHIN_LAST_5_YRS__c.field-meta.xml
<CustomField>
    <fullName>TAX_LIENS_BANKRUPTCY_WITHIN_LAST_5_YRS__c</fullName>
    <inlineHelpText>ANY TAX LIENS OR BANKRUPTCY WITHIN THE LAST FIVE (5) YEARS? (If &quot;YES&quot;, please specify)</inlineHelpText>
    <label>TAX LIENS/BANKRUPTCY WITHIN  LAST 5 YRS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N</fullName>
                <default>true</default>
                <label>N</label>
            </value>
            <value>
                <fullName>Y</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>