force-app/main/default/objects/Submission_Requirement__c/fields/U_S_L_H__c.field-meta.xml
<CustomField>
    <fullName>U_S_L_H__c</fullName>
    <defaultValue>false</defaultValue>
    <label>U.S.L. &amp; H.</label>
    <type>Checkbox</type>
</CustomField>