force-app/main/default/objects/Submission_Requirement__c/fields/UNDISPUTED_UNPAID_WC_PREMIUM_DUE__c.field-meta.xml
<CustomField>
    <fullName>UNDISPUTED_UNPAID_WC_PREMIUM_DUE__c</fullName>
    <inlineHelpText>ANY UNDISPUTED AND UNPAID WORKERS COMPENSATION PREMIUM DUE FROM YOU OR ANY COMMONLY MANAGED OR OWNED ENTERPRISES? IF YES, EXPLAIN INCLUDING ENTITY NAME(S) AND POLICY NUMBER(S).</inlineHelpText>
    <label>UNDISPUTED &amp; UNPAID WC PREMIUM DUE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N</fullName>
                <default>true</default>
                <label>N</label>
            </value>
            <value>
                <fullName>Y</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>