force-app/main/default/objects/Submission_Requirement__c/fields/VOLUNTARY_COMP__c.field-meta.xml
<CustomField>
    <fullName>VOLUNTARY_COMP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VOLUNTARY COMP</label>
    <type>Checkbox</type>
</CustomField>