force-app/main/default/objects/Submission_Requirement__c/fields/VOLUNTEER_OR_DONATED_LABOR__c.field-meta.xml
<CustomField>
    <fullName>VOLUNTEER_OR_DONATED_LABOR__c</fullName>
    <inlineHelpText>IS THERE ANY VOLUNTEER OR DONATED LABOR? (If &quot;YES&quot;, please specify)</inlineHelpText>
    <label>VOLUNTEER OR DONATED LABOR?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N</fullName>
                <default>true</default>
                <label>N</label>
            </value>
            <value>
                <fullName>Y</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>