force-app/main/default/objects/Submission_Requirement__c/fields/VOLUNTEER_OR_DONATED_LABOR_EXPLANATION__c.field-meta.xml
<CustomField>
    <fullName>VOLUNTEER_OR_DONATED_LABOR_EXPLANATION__c</fullName>
    <inlineHelpText>VOLUNTEER OR DONATED LABOR EXPLANATION</inlineHelpText>
    <label>VOLUNTEER OR DONATED LABOR EXPLANATION</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>