force-app/main/default/objects/Submission_Requirement__c/fields/WORK_PERFORMED_ON_BARGES_VESSELS_DOCKS__c.field-meta.xml
<CustomField>
    <fullName>WORK_PERFORMED_ON_BARGES_VESSELS_DOCKS__c</fullName>
    <inlineHelpText>ANY WORK PERFORMED ON BARGES, VESSELS, DOCKS, BRIDGE OVER WATER?</inlineHelpText>
    <label>WORK PERFORMED ON BARGES, VESSELS, DOCKS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N</fullName>
                <default>true</default>
                <label>N</label>
            </value>
            <value>
                <fullName>Y</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>