force-app/main/default/objects/Submission_Requirement__c/fields/WORK_PERFORMED_UNDERGROUND_OR_ABOVE_15_F__c.field-meta.xml
<CustomField>
    <fullName>WORK_PERFORMED_UNDERGROUND_OR_ABOVE_15_F__c</fullName>
    <inlineHelpText>ANY WORK PERFORMED UNDERGROUND OR ABOVE 15 FEET?</inlineHelpText>
    <label>WORK PERFORMED UNDERGROUND OR ABOVE 15 F</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N</fullName>
                <default>true</default>
                <label>N</label>
            </value>
            <value>
                <fullName>Y</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>