force-app/main/default/objects/Submission_Requirement__c/fields/WORK_SUBLET_W_O_CERTIFICATES_OF_INSURANC__c.field-meta.xml
<CustomField>
    <fullName>WORK_SUBLET_W_O_CERTIFICATES_OF_INSURANC__c</fullName>
    <inlineHelpText>ANY WORK SUBLET WITHOUT CERTIFICATES OF INSURANCE? (If &quot;YES&quot;, payroll for this work must be included in the State Rating Worksheet on Page 2)</inlineHelpText>
    <label>WORK SUBLET W/O CERTIFICATES OF INSURANC</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N</fullName>
                <default>true</default>
                <label>N</label>
            </value>
            <value>
                <fullName>Y</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>