force-app/main/default/objects/Submission_Requirement__c/fields/WRITTEN_SAFETY_PROGRAM_IN_OPERATION__c.field-meta.xml
<CustomField>
    <fullName>WRITTEN_SAFETY_PROGRAM_IN_OPERATION__c</fullName>
    <inlineHelpText>IS A WRITTEN SAFETY PROGRAM IN OPERATION?</inlineHelpText>
    <label>WRITTEN SAFETY PROGRAM IN OPERATION</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N</fullName>
                <default>true</default>
                <label>N</label>
            </value>
            <value>
                <fullName>Y</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>